[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Main/PlayerStats.gd" type="Script" id=1]

[node name="PlayerStats" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -781.0
margin_bottom = -352.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 236.0
margin_bottom = 241.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
margin_left = 44.0
margin_top = 68.0
margin_right = 184.0
margin_bottom = 166.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_right = 140.0
margin_bottom = 14.0
text = "Player Stats"
align = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 140.0
margin_bottom = 14.0

[node name="Anger" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 140.0
margin_bottom = 28.0

[node name="StatName" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/Anger"]
margin_right = 41.0
margin_bottom = 14.0
text = "Anger:"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer/VBoxContainer/Anger"]
margin_left = 45.0
margin_right = 104.0
margin_bottom = 14.0
custom_constants/margin_left = 59

[node name="StatValue" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/Anger"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 14.0
text = "9999"

[node name="Wisdom" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 140.0
margin_bottom = 42.0

[node name="StatName" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/Wisdom"]
margin_right = 57.0
margin_bottom = 14.0
text = "Wisdom:"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer/VBoxContainer/Wisdom"]
margin_left = 61.0
margin_right = 104.0
margin_bottom = 14.0
custom_constants/margin_left = 43

[node name="StatValue" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/Wisdom"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 14.0
text = "9999"

[node name="Strength" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 140.0
margin_bottom = 56.0

[node name="StatName" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/Strength"]
margin_right = 57.0
margin_bottom = 14.0
text = "Strength:"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer/VBoxContainer/Strength"]
margin_left = 61.0
margin_right = 104.0
margin_bottom = 14.0
custom_constants/margin_left = 43

[node name="StatValue" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/Strength"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 14.0
text = "9999"

[node name="Dexterity" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 140.0
margin_bottom = 70.0

[node name="StatName" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/Dexterity"]
margin_right = 63.0
margin_bottom = 14.0
text = "Dexterity:"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer/VBoxContainer/Dexterity"]
margin_left = 67.0
margin_right = 104.0
margin_bottom = 14.0
custom_constants/margin_left = 37

[node name="StatValue" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/Dexterity"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 14.0
text = "9999"

[node name="SexualStamina" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 140.0
margin_bottom = 84.0

[node name="StatName" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/SexualStamina"]
margin_right = 100.0
margin_bottom = 14.0
text = "Sexual stamina:"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer/VBoxContainer/SexualStamina"]
margin_left = 104.0
margin_right = 104.0
margin_bottom = 14.0

[node name="StatValue" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/SexualStamina"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 14.0
text = "9999"

[node name="ClickerScore" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 140.0
margin_bottom = 98.0

[node name="StatName" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/ClickerScore"]
margin_right = 86.0
margin_bottom = 14.0
text = "Clicker score:"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer/VBoxContainer/ClickerScore"]
margin_left = 90.0
margin_right = 104.0
margin_bottom = 14.0
custom_constants/margin_left = 14

[node name="StatValue" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/ClickerScore"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 14.0
text = "9999"
